# sst-filters

./: .codedocs  CMakeLists.txt  LICENSE.md  README.md  azure-pipelines.yml  post-change.txt  pre-change.txt
.github/workflows/: build-pr.yml
examples/: CMakeLists.txt
examples/filter_plot_tool/: AudioFFT.cpp  AudioFFT.h  CMakeLists.txt  filter_plot_tool.cpp
examples/filters_example_plugin/: CMakeLists.txt  FilterPlotComponent.cpp  FilterPlotComponent.h  FiltersPlugin.cpp  FiltersPlugin.h  FiltersPluginEditor.cpp  FiltersPluginEditor.h
examples/filters_plus_plus/: CMakeLists.txt  filter_plus_plus_bruteforce.cpp  filter_plus_plus_dumpmodels.cpp  pngplot.h
include-extras/sst/filters/: FilterPlotter.h
include/sst/: filters++.h  filters.h
include/sst/filters/: BiquadFilter.h  ButterworthLPHP.h  CutoffWarp.h  CytomicSVF.h  CytomicSVFQuadForm.h  CytomicTilt.h  DiodeLadder.h  FastTiltNoiseFilter.h  FilterCoefficientMaker.h  FilterCoefficientMaker_Impl.h  FilterConfiguration.h  FilterConfigurationLabels.h  HalfRateFilter.h  K35Filter.h  LinkwitzRiley.h  OBXDFilter.h  QuadFilterUnit.h  QuadFilterUnit_Impl.h  ResonanceWarp.h  TriPoleFilter.h  TuningProvider.h  VintageLadders.h
include/sst/filters++/: api.h  configuration_selector.h  enums.h  enums_to_string.h  model_config.h
include/sst/filters++/details/: configuration_selector_impl.h  filter_impl.h  filter_payload.h
include/sst/filters++/models/: Comb.h  CutoffWarp.h  CytomicSVF.h  DiodeLadder.h  K35.h  OBXD_2Pole.h  OBXD_4Pole.h  OBXD_XPander.h  OBXD_Xpander.h  ResonanceWarp.h  SampleAndHold.h  Tripole.h  VemberAllPass.h  VemberAllpass.h  VemberClassic.h  VemberLadder.h  VintageLadder.h
include/sst/utilities/: FastMath.h  SincTable.h  basic_dsp.h  globals.h  shared.h
scripts/: fix_file_comments.pl  fix_header_guards.pl
tests/: BasicFiltersTest.cpp  BasicFiltersTest.h  BiquadTest.cpp  ButterworthTest.cpp  CMakeLists.txt  CutoffWarpTest.cpp  CytomicSVFTests.cpp  DiodeLadderTest.cpp  FastTiltNoiseFilterTest.cpp  HalfRateTest.cpp  K35FilterTest.cpp  LinkwitzRileyTest.cpp  OBXDFilterTest.cpp  ResonanceWarpTest.cpp  TestUtils.h  TriPoleFilterTest.cpp  VintageLaddersTest.cpp  filters_plus_plus.cpp  tests.cpp
